force to older version

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:rp2040]
-platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git#v1.2.0-gcc12
 board = waveshare_rp2040_zero
 framework = arduino
 board_build.core = earlephilhower
@@ -22,10 +22,10 @@ build_flags =
   -DCFG_TUD_VIDEO_STREAMING=0
 lib_archive = no
 lib_deps = 
-	mathertel/OneButton @ ^2.5.0
-	infineon/TLV493D-Magnetic-Sensor @ ^1.0.3
-	denyssene/SimpleKalmanFilter @ ^0.1.0
-	khoih-prog/RP2040_PWM@^1.7.0
+	mathertel/OneButton @ 2.5.0
+	infineon/TLV493D-Magnetic-Sensor @ 1.0.3
+	denyssene/SimpleKalmanFilter @ 0.1.0
+	khoih-prog/RP2040_PWM@ 1.7.0
 	Wire
-	hideakitai/Tween@^0.4.2
+	hideakitai/Tween@ 0.4.2
 monitor_speed = 115200
