force to older versions; change the button behaviour; button1 is now a modifier to control isOrbit.

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,23 +9,35 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:rp2040]
-platform = https://github.com/maxgerhardt/platform-raspberrypi.git#v1.2.0-gcc12
+; platform = https://github.com/maxgerhardt/platform-raspberrypi.git#v1.2.0-gcc12
+platform = file://C:/proj/spacemouse/platform-raspberrypi
+; platform = https://github.com/maxgerhardt/platform-raspberrypi.git#196d31bbafaf60b84751b1a415d8dca2365debdf ; 
+; platform = https://github.com/platformio/platform-raspberrypi.git
 board = waveshare_rp2040_zero
 framework = arduino
 board_build.core = earlephilhower
 build_flags =
   -std=c++17
   -DUSE_TINYUSB
+  ; -DCFG_TUD_MSC=0
   -DCFG_TUD_MSC=0
+  ; -DCFG_TUD_MIDI=0
   -DCFG_TUD_MIDI=0
   -DCFG_TUD_VIDEO=0
   -DCFG_TUD_VIDEO_STREAMING=0
 lib_archive = no
 lib_deps = 
-	mathertel/OneButton @ 2.5.0
-	infineon/TLV493D-Magnetic-Sensor @ 1.0.3
-	denyssene/SimpleKalmanFilter @ 0.1.0
-	khoih-prog/RP2040_PWM@ 1.7.0
+	; mathertel/OneButton @ 2.5.0
+	; infineon/TLV493D-Magnetic-Sensor @ 1.0.3
+	; denyssene/SimpleKalmanFilter @ 0.1.0
+	; khoih-prog/RP2040_PWM@ 1.7.0
+	; Wire
+	; hideakitai/Tween@ 0.4.2
+	; earlephilhower/arduino-pico @ #4d1d1d23046f39d1042cf627ec6a3abaf78bb5a1
+	mathertel/OneButton @ ^2.5.0
+	infineon/TLV493D-Magnetic-Sensor @ ^1.0.3
+	denyssene/SimpleKalmanFilter @ ^0.1.0
+	khoih-prog/RP2040_PWM@^1.7.0
 	Wire
-	hideakitai/Tween@ 0.4.2
+	hideakitai/Tween@^0.4.2
 monitor_speed = 115200
