add RGB led library

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,6 +34,7 @@ lib_deps =
 	; Wire
 	; hideakitai/Tween@ 0.4.2
 	; earlephilhower/arduino-pico @ #4d1d1d23046f39d1042cf627ec6a3abaf78bb5a1
+    adafruit/Adafruit NeoPixel@^1.12.0
 	mathertel/OneButton @ ^2.5.0
 	infineon/TLV493D-Magnetic-Sensor @ ^1.0.3
 	denyssene/SimpleKalmanFilter @ ^0.1.0
