revert i2c library issues causing magnetosensor to time out

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:rp2040]
-; platform = https://github.com/maxgerhardt/platform-raspberrypi.git#v1.2.0-gcc12
-platform = file://C:/proj/spacemouse/platform-raspberrypi
-; platform = https://github.com/maxgerhardt/platform-raspberrypi.git#196d31bbafaf60b84751b1a415d8dca2365debdf ; 
-; platform = https://github.com/platformio/platform-raspberrypi.git
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git#v1.2.0-gcc12
+platform_packages = framework-arduinopico@https://github.com/earlephilhower/arduino-pico.git#76811d3c669cf86e6991099b19de42459f144282
 board = waveshare_rp2040_zero
 framework = arduino
 board_build.core = earlephilhower
